fixed panel alignment, added panel nav and article buttons

--- a/kiosk/css/grid-play.css
+++ b/kiosk/css/grid-play.css
@@ -2,12 +2,16 @@ body {
   margin: 0;
 }
 
-.prev-panel {
-  grid-area: prev-panel;
+.msm-link {
+  grid-area: msm-link;
 }
 
-.next-panel {
-  grid-area: next-panel;
+.site-title {
+  grid-area: site-title;
+}
+
+.panel-nav {
+  grid-area: panel-nav;
 }
 
 .panel-title {
@@ -26,41 +30,38 @@ body {
   max-height: 80vh;
 }
 
-.site-title {
-  grid-area: site-title;
+.prev-panel {
+  grid-area: prev-panel;
 }
 
-.msm-link {
-  grid-area: msm-link;
-}
-
-.panel-nav {
-  grid-area: panel-nav;
-}
-
-.current-panel article {
-  grid-area: text;
-}
-
-.current-panel img {
-  grid-area: panel-image;
-}
-
-.current-panel .tabs {
-  grid-area: article-buttons;
+.next-panel {
+  grid-area: next-panel;
 }
 
 .current-panel {
   grid-area: current-panel;
   display: grid;
-  grid-template-columns: 1fr auto 1fr;
-  grid-gap: 5%;
-  grid-template-areas: 
+  /*grid-template-columns: 1fr auto 1fr;*/
+  grid-template-areas:
   "text"
   "panel-image"
   "article-buttons";
-  padding: 1em;
   overflow: auto;
+}
+
+.current-panel article {
+  grid-area: text;
+  padding: 1em;
+}
+
+.current-panel img {
+  grid-area: panel-image;
+  margin: 0 auto;
+}
+
+.current-panel .tabs {
+  grid-area: article-buttons;
+  padding: 1em;
 }
 
 /*large display*/
@@ -108,7 +109,7 @@ body {
 @media only screen and (min-width: 800px)   {
   .wrapper {
 /*  grid-gap: 1em;*/
-    grid-template-columns: 120px auto 120px;
+    grid-template-columns: 120px auto 200px;
     grid-template-areas:
     "msm-link site-title panel-nav"
     "panel-title panel-title panel-title"
@@ -116,15 +117,56 @@ body {
   }
 }
 
+nav.tabs {
+/*  position: absolute;
+  bottom: 0px;*/
+}
+
+.tabs ul {
+  font-size: 0.75em;
+  letter-spacing: 0.025em;
+  padding: 0;
+  text-transform: uppercase;
+}
+.tabs ul li {
+  background-color: #ff9933;
+  border: 1px solid #e67300;
+  border-radius: 60px;
+  display: inline-block;
+  font-weight: bold;
+  height: 60px;
+  letter-spacing: 0.05em;
+  line-height: 1.2;
+  margin: 0px 0px 5px 0px;
+  padding: .5em;
+  text-align: center;
+  width: 90%;
+}
+.tabs ul li a:link, .tabs ul li a:visited {
+  color: white;
+}
+.tabs ul li a:hover {
+  color: #444;
+  text-decoration: underline;
+}
+
+.tabs ul li.selected {
+  background-color: #444;
+  color: white;
+}
+
+.panel-nav {
+/*  grid-column: 3;
+  grid-row: 1;*/
+  margin-left: 1em;
+}
+.panel-nav img {
+  margin-right: -2px;
+}
+
 .site-title, .msm-link, .panel-nav {
-  background-color: black;
 }
 
 .panel-title {
   background-color: gray;
-}
-
-.next-panel, .prev-panel {
-  background-color: #ccc;
-  color: #444;
 }
